--- a/styles.css
+++ b/styles.css
@@ -150,12 +150,12 @@ small,
 }
 
 .padding-y-lg {
-  padding: calc(var(--spacer) * 3) 0;
+  padding: calc(var(--spacer) * 2) 0;
 }
 
 @media (min-width: 48rem) {
   .padding-y-lg {
-    padding: calc(var(--spacer) * 5) 0;
+    padding: calc(var(--spacer) * 3) 0;
   }
 }
 
@@ -191,6 +191,12 @@ small,
   position: relative;
   z-index: 0;
   padding-bottom: calc(var(--spacer) * 2);
+  background-color: var(--color-primary);
+  color: var(--color-white);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 50vh;
 }
 
 [class*="bg-page"] .overlay {
@@ -206,18 +212,21 @@ small,
 
 /* Hero bg Home */
 .bg-page-home {
-  background-color: var(--color-primary);
-  color: var(--color-white);
   background-image: url(assets/images/bg-home.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  min-height: 50vh;
+}
+
+/* Hero bg Installations */
+.bg-page-facilities {
+  background-image: url(assets/images/bg-facilities.png);
+}
+
+.bg-page-rooms {
+  background-image: url(assets/images/bg-rooms.png);
 }
 
 @media (min-width: 48rem) {
   [class*="bg-page"] {
-    min-height: 60vh;
+    min-height: 70vh;
   }
 }
 
@@ -398,6 +407,52 @@ input:focus {
     display: grid;
     grid-template-columns: 1fr auto auto 1fr;
   }
+}
+
+/* facilities */
+.facilities {
+  max-width: 40rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+}
+
+.facilities > * + * {
+  margin-top: 4rem;
+}
+
+/* rooms */
+.rooms {
+  max-width: 40rem;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+}
+
+.rooms > * + * {
+  margin-top: 4rem;
+}
+
+/* .room {
+  border: 1px solid var(--color-primary);
+} */
+
+.room .name {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+  text-align: center;
+  padding: var(--spacer);
+}
+
+.room .details-container {
+  padding: calc(var(--spacer) * 2);
+  border: 1px solid var(--color-primary);
+  border-bottom-left-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+}
+
+.room .details {
+  display: none;
 }
 
 /* LAYOUT PRIMITIVES */
